welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:26: error: not found: value decalage
  if ((j+decalage)%taille !=0){return 0}
         ^Array2:26: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  if ((j+decalage)%taille !=0){return 0}
                                      ^Array2:26: warning: enclosing method restor has result type Unit: return value discarded
  if ((j+decalage)%taille !=0){return 0}
                               ^Array2:27: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  else {return taille}
               ^Array2:27: warning: enclosing method restor has result type Unit: return value discarded
  else {return taille}
        ^