welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var tailleY:Int = getMondeHauteur()
  var tailleX:Int = getMondeLargeur()
  var tabColor = new Array[Color](tailleY)
  for (i <- 0 to tailleY - 2){
    tabColor(i) = getCouleurSol()
    avance()
  }
  for (i <- 0 to tailleY - 2){recule()}
  for (i <- 0 to tailleX-2){
  	gauche()
  	avance()
    droite()
    var decalage = litMessage().toInt
  	for (j <-0 to tailleY-1){
    	setCouleurBrosse( tabColor((j+decalage)%(tailleY)))
      println(i,j,(j+decalage)%tabColor.length)
    	baisseBrosse()
    	leveBrosse()
    	avance()
  		}
    for (j <- 0 to tabColor.length-1){recule()}
		}
}
def restor(j:Int,decale:Int,taille:Int){
  if ((j+decalage)%taille !=0){return 0}
  else {return taille}
}